--- a/overviewer_core/data/web_assets/index.html
+++ b/overviewer_core/data/web_assets/index.html
@@ -18,6 +18,13 @@
 <script type="text/javascript" src="overviewerConfig.js"></script>
 <script type="text/javascript" src="overviewer.js"></script>
 <script type="text/javascript" src="baseMarkers.js"></script>
+<script type="text/javascript" src="geoJSON.js"></script>
+<script type="text/javascript">
+	window.geoJSONConfig = {
+		url: "layers.example.json",
+		title: "Metro"
+	};
+</script>
 
 </head>
 
